# put this code in
[project]
name = "agent-toolkit"
version = "0.1.0"
description = "A simple agent wrapper for OpenAI calls"
authors = [{ name = "nihasharma21", email = "nihasharma21@gmail.com" }]
dependencies = ["openai>=1.0.0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"